fix: update button background color for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   height: var(--size);
   border-radius: 50%;
   border: none;
-  background-color: #eb3d7d;
+  background-color: #f53c99;
   color: white;
   font-size: 1.4rem;
   font-weight: 900;
